my-k8s-minikube-cluster-01/kubernetes/for-fixed-names/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: topics-service
spec:
  type: ClusterIP
  selector:
    app: topics-base-01
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: words-service
spec:
  type: ClusterIP
  selector:
    app: words-base-01
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
