my-k8s-minikube-cluster-01/kubernetes/for-fixed-names/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  selector:
    app: frontend-base-01
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002
